--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,11 @@
   "compilerOptions": {
     "module": "commonjs",
     "target": "es6",
-    "sourceMap": true
+    "sourceMap": true,
+    "lib": [
+      "dom",
+      "ES2017"
+    ]
   },
   "exclude": [
     "node_modules"
