--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "bugs": {
     "url": "https://github.com/paeda-bonn/vplan-display/issues"
   },
+  "scripts": {
+    "build": "npx tsc"
+  }
   "homepage": "https://github.com/paeda-bonn/vplan-display#readme",
   "dependencies": {
     "sass": "^1.28.0",
